--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -14,10 +14,12 @@ jobs:
       - name: Run gha-prep-release
         uses: alehechka/gha-prep-release@develop
         with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           skip_back_merge: true
 
       - name: Run gha-prep-release (semver_tag)
         uses: alehechka/gha-prep-release@develop
         with:
+          GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           skip_back_merge: true
           semver_tag: 'hardcode-semver'
