--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -12,14 +12,21 @@ jobs:
     name: Test gha-prep-release
     steps:
       - name: Run gha-prep-release
+        id: commit-tag
         uses: alehechka/gha-prep-release@develop
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           skip_back_merge: true
 
       - name: Run gha-prep-release (semver_tag)
+        id: provided-tag
         uses: alehechka/gha-prep-release@develop
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           skip_back_merge: true
           semver_tag: 'hardcode-semver'
+
+      - name: Print Tags
+        run: |
+          echo "Commit Tag: ${{ steps.commit-tag.outputs.tag }}"
+          echo "Provided Tag: ${{ steps.provided-tag.outputs.tag }}"
