[MAJOR]: Release Candidate v1.0.0

--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -13,14 +13,13 @@ jobs:
     steps:
       - name: Run gha-prep-release
         id: commit-tag
-        uses: alehechka/gha-prep-release@develop
+        uses: alehechka/gha-prep-release@main
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
-          skip_back_merge: true
 
       - name: Run gha-prep-release (semver_tag)
         id: provided-tag
-        uses: alehechka/gha-prep-release@develop
+        uses: alehechka/gha-prep-release@main
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           skip_back_merge: true
