--- a/action.yaml
+++ b/action.yaml
@@ -5,32 +5,59 @@ inputs:
   GITHUB_TOKEN:
     description: 'GitHub Action Token or PAT'
     required: true
+
   skip_back_merge:
     description: 'Flag to skip back merge step.'
     required: false
     default: 'false'
+
   back_merge_branch:
     description: 'Branch to back merge into.'
     required: false
     default: ${{ github.event.repository.default_branch }}
+
   semver_tag:
     description: 'Semver Override Tag'
     required: false
+
   patch_pattern:
     description: 'Patch keyword to search for in determining semver increment'
     required: false
     default: '[PATCH]'
+
   minor_pattern:
     description: 'Minor keyword to search for in determining semver increment'
     required: false
     default: '[MINOR]'
+
   major_pattern:
     description: 'Major keyword to search for in determining semver increment'
     required: false
     default: '[MAJOR]'
+
   initial_version:
     description: The initial version.
     required: false
+    default: 'v0.0.0'
+
+  release_prefix:
+    description: 'Prefix for automation release branch'
+    required: false
+    default: 'auto-release'
+
+  commit-message:
+    description: 'The commit message to use for the merge'
+    required: false
+
+  commit-author-name:
+    description: 'The author name to use for the merge'
+    required: false
+    default: 'github-actions'
+
+  commit-author-email:
+    description: 'The email to use for the merge'
+    required: false
+    default: 'github-actions@github.com'
 
 outputs:
   tag:
@@ -46,6 +73,9 @@ runs:
       with:
         token: ${{ inputs.GITHUB_TOKEN }}
         src-branch: ${{ github.ref_name }}
+        commit-message: ${{ inputs.commit-message }}
+        commit-author-name: ${{ inputs.commit-author-name }}
+        commit-author-email: ${{ inputs.commit-author-email }}
 
     - name: Checkout if skipped merge
       if: inputs.skip_back_merge == 'true'
@@ -84,10 +114,11 @@ runs:
       with:
         semver_only: true
         with_initial_version: true
+        initial_version: ${{ inputs.initial_version }}
 
     - name: Increment Latest Tag
       uses: actions-ecosystem/action-bump-semver@v1
-      if: inputs.semver_tag == '' && steps.semver-increment.outputs.level != 'none'
+      if: inputs.semver_tag == '' && steps.latest-tag.outputs.tag != ''
       id: bump-semver
       with:
         current_version: ${{ steps.latest-tag.outputs.tag }}
@@ -111,4 +142,4 @@ runs:
       env:
         GITHUB_TOKEN: ${{ inputs.GITHUB_TOKEN }}
       with:
-        branch: 'auto-release/${{ steps.semver.outputs.tag }}'
+        branch: '${{ inputs.release_prefix }}/${{ steps.semver.outputs.tag }}'
