--- a/.github/workflows/main.yaml
+++ b/.github/workflows/main.yaml
@@ -21,7 +21,7 @@ jobs:
       - name: Run gha-prep-release (semver_tag)
         if: github.ref_name != 'main'
         id: commit-tag
-        uses: alehechka/gha-prep-release@main
+        uses: alehechka/gha-prep-release@develop
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           skip_back_merge: true
