--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -21,7 +21,7 @@ jobs:
 
       - name: Run gha-prep-release (semver_tag)
         id: provided-tag
-        uses: alehechka/gha-prep-release@main
+        uses: alehechka/gha-prep-release@develop
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           skip_back_merge: true
