use correct branch in runs

--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -14,7 +14,7 @@ jobs:
       - name: Run gha-prep-release (non-main)
         if: github.ref_name != 'main'
         id: commit-tag
-        uses: dmsi-io/gha-prep-release@develop
+        uses: ./
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           skip_back_merge: true
@@ -22,7 +22,7 @@ jobs:
 
       - name: Run gha-prep-release (semver_tag)
         id: provided-tag
-        uses: dmsi-io/gha-prep-release@develop
+        uses: ./
         with:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
           skip_back_merge: true
