--- a/.github/workflows/develop.yaml
+++ b/.github/workflows/develop.yaml
@@ -11,6 +11,8 @@ jobs:
     runs-on: ubuntu-latest
     name: Test gha-prep-release
     steps:
+      - uses: actions/checkout@v3
+
       - name: Run gha-prep-release (non-main)
         if: github.ref_name != 'main'
         id: commit-tag
