--- a/action.yaml
+++ b/action.yaml
@@ -131,8 +131,7 @@ runs:
     - name: Find Latest Tag
       if: inputs.semver_tag == '' && steps.semver-increment.outputs.level != ''
       id: latest-tag
-      # Commit equivalent to https://github.com/actions-ecosystem/action-get-latest-tag/releases/tag/v1
-      uses: actions-ecosystem/action-get-latest-tag@12e889eb7760061c988f66a45bbd2d5010772630
+      uses: dmsi-io/gha-get-latest-tag@main
       with:
         semver_only: true
         with_initial_version: true
